# kiro-customer-survey

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build-container.sh  entrypoint.sh  gunicorn.conf.py  implementation.md  pyproject.toml  pytest.ini  run.py  run_tests.sh
.github/workflows/: build-container.yml
.kiro/agents/: customer-survey.json  dba.json  java-dev.json  python-dev.json  test.json
.kiro/prompts/: proj-setup.md
.kiro/shared/: pirate.md  python-dev.md  springboot.md
.kiro/steering/: ip.md  python-dev.md
src/: __init__.py  extensions.py
src/models/: __init__.py  survey.py  user.py
src/routes/: __init__.py  auth.py  pages.py  surveys.py
src/static/: style.css
src/templates/: base.html  contact.html  create_survey.html  dashboard.html  help.html  login.html  register.html  survey_response.html  survey_results.html  survey_thanks.html
tests/: __init__.py  conftest.py  test_auth.py  test_models.py  test_surveys.py
